# gentropy

./: .coverage.C02YN2L7JHD2.62143.283474  .coverage.C02YN2L7JHD2.9162.054882  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Dockerfile.dev  FEATURE_TRANS_PQTL_COLOC.md  Makefile  README.md  codecov.yml  index.html  macros.tex  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json  postCreateCommand.sh  welcome.txt
.github/: dependabot.yaml  labeler.yml  pull_request_template.md  semantic.yml
.github/workflows/: artifact.yml  black.yml  docs.yaml  labeler.yml  lints.yml  poetry_deps.yaml  pr.yaml  pr_release_trigger.yaml  prerelease.yaml  pylint.yml  pytest.yaml  release.yaml
README/: CHEERS.md
airflow/: Dockerfile  README.md
airflow/dags/: common.py  dag_preprocess.py
config/: __init__.py  config.yaml  ot_config.yaml
config/datasets/: gcp.yaml  ot_gcp.yaml
config/session/: dataproc.yaml
config/step/: clump.yaml  colocalisation.yaml  eqtl_catalogue.yaml  eqtl_catalogue_ingestion.yaml  finngen.yaml  finngen_finemapping_ingestion.yaml  finngen_studies.yaml  finngen_sumstat_preprocess.yaml  gene_index.yaml  gwas_catalog.yaml  gwas_catalog_curation_update.yaml  gwas_catalog_ingestion.yaml  gwas_catalog_sumstat_preprocess.yaml  gwas_study_inclusion.yaml  ld_based_clumping.yaml  ld_index.yaml  locus_to_gene.yaml  my_colocalisation.yaml  my_finemapping.yaml  my_finngen.yaml  my_fm_data_extraction.yaml  my_gene_index.yaml  my_gwas_catalog.yaml  my_l2g.yaml  my_ld_index.yaml  my_ld_matrix.yaml  my_locus_to_gene.yaml  my_study_locus_overlap.yaml  my_ukbiobank.yaml  my_v2g.yaml  my_variant_annotation.yaml  my_variant_index.yaml  ot_clump.yaml  ot_colocalisation.yaml  ot_colocalisation_coloc.yaml  ot_colocalisation_ecaviar.yaml  ot_eqtl_catalogue.yaml  ot_finngen_finemapping_ingestion.yaml  ot_finngen_studies.yaml  ot_finngen_sumstat_preprocess.yaml  (+27 more)
configs/: coloc.yaml  config.yaml
configs/datarelease/: dummy.yaml
configs/environment/: dataproc.yaml  local.yaml
configs/etl/: reference.yaml
configs/machine/: dataproc.yaml
contributing/: index.html
contributing/_contributing/: index.html
contributing/guidelines/: index.html
contributing/troubleshooting/: index.html
dags/: genetics_airflow_gcp.py  genetics_etl_experimental.py  genetics_etl_gcp.py
data/studyLocusId=00b83055254bc4eee9cba379222a1eee/: part-00892-a0bc0e78-a5e4-4e71-abfd-11370b325269.c000.snappy.parquet
deprecated_tests/: test_coloc.py  test_distance.py  test_effect_harmonization.py  test_gwas_process_assoc.py  test_intervals_helpers.py  test_vep.py
development/_development/: index.html
development/airflow/: index.html
development/contributing/: index.html
development/troubleshooting/: index.html
development/workflows/: index.html
docs/: contributing.md  index.md  installation.md  roadmap.md  usage.md
docs/contributing/: _contributing.md  guidelines.md  troubleshooting.md
docs/development/: a_environment.md  airflow.md  b_contributing.md  c_airflow.md  contributing.md  d_troubleshooting.md  troubleshooting.md  workflows.md
docs/howto/: .pages  _howto.md  run_step_in_cli.md  run_step_using_config.md
docs/modules/: colocalisation.md  gwas_ingest.md  intervals.md  schemas.md  variant_to_gene.md  variants.md
docs/python_api/: .pages  _python_api.md  ukb_ppp_eur.md  ukb_ppp_eur_sumstat_preprocess.md
documentation/: GWAS_ingestion.md  README.md  intervals.md  variant_annotation.md
howto/_howto/: index.html
howto/run_step_in_cli/: index.html
howto/run_step_using_config/: index.html
installation/: index.html
notebooks/: 20241114_out_of_sample_validation.ipynb  24.09-variant-index-cs-crossvalidation.ipynb  Drug_target_l2g_enrichment.ipynb  Effector_gene_list.ipynb  FineMappingSimmuations.ipynb  FineMapping_AlzheimierDisease.ipynb  Finngen_PICS_run.ipynb  GWAS_Catalog_data_update.ipynb  Goldstandard_negatives.ipynb  Goldstandard_positives.ipynb  L2G.ipynb  LocusToGene.ipynb  Mapping_EFO_finngen.ipynb  Productionizing_LD_matrix.ipynb  README.md  README_essential_genes.md  Release_QC_metrics.ipynb  demo_essential_genes_standalone.py  do_test_ld.py  essential_genes_analysis.ipynb  essential_genes_demo.py  grid_search.ipynb  gwas_cat_benchmark.ipynb  l2g_benchmark.ipynb  l2g_explore.ipynb  l2g_model.ipynb  l2g_scikit.ipynb  multiAncestriesLDCombi.ipynb  notebook.ipynb  pics_benchmark.ipynb  susie_inf_benchmark.ipynb  ukb_mvp_meta_benchmark.ipynb  ukb_ppp_benchmark.ipynb
reference/: index.html
roadmap/: index.html
rust-linalg/: Cargo.toml  README.md
rust-linalg/examples/: demo.rs
rust-linalg/src/: lib.rs
search/: search_index.json
src/: __init__.py  bm_test.py  cli.py  clump_temp.py  clumps_nfe_studies.py  coloc.py  colocMetadata.py  coloc_metadata.py  config.yaml  conftest.py  coordinatematrix.py  do_test_ld.py  generate_variant_annotation.py  ld_experiment.py  ld_nfe.py  ld_nfe_lite.py  long_ld_to_matrix.py  overlaps.py  pics_experiment.py  regionalLD_to_densematrix.py  run_EPIMAP.py  run_cheers.py  run_coloc.py  run_distance.py  run_finngen_ingest.py  run_gwas_ingest.py  run_intervals.py  run_l2g.py  run_precompute_ld_indexes.py  run_tissue_enrichment.py  run_v2g.py  run_variant_annotation.py  run_variant_index.py  sl_ld_annotation.py  sl_ld_annotation_lite.py  test_matrix.py  utils.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
test/: test_gwas_process_assoc.py
tests/: __init__.py  conftest.py  test_cli.py  test_coloc.py  test_distance.py  test_docs.py  test_effect_harmonization.py  test_gwas_process_assoc.py  test_intervals_helpers.py  test_overlaps.py  test_schemas.py  test_spark_helpers.py  test_vep.py
troubleshooting/: index.html
usage/: index.html
utils/: clean_status.sh  configure.py  initialise_cluster.sh  install_dependencies.sh  install_dependencies_on_cluster.sh  install_gcs_connector.py  remove_pyenv_poetry.md  update_GWAS_Catalog_data.sh  update_vep_cache.sh
workflow/: __init__.py  dag.yaml  workflow_template.py
(+1484 files in other folders)
